kubernetes/monitoring/prometheus/exporters/blackbox-exporter/prometheus-blackbox-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-blackbox-exporter
  namespace: monitoring
  labels:
    app: prometheus-blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-blackbox-exporter
  template:
    metadata:
      labels:
        app: prometheus-blackbox-exporter
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c

      containers:
      - name: prometheus-blackbox-exporter
        resources:
        ports:
        - containerPort: 9115
        image: prom/blackbox-exporter:master
        args:
          - --config.file=/config/blackbox.yml
        volumeMounts:
        - name: blackbox-exporter-config-volume
          mountPath: /config/blackbox.yml
          subPath: blackbox.yml
        securityContext:
          capabilities:
            add:
              - NET_RAW  # Add the NET_RAW capability to be able to use the ICMP protocol (ping)
      volumes:
        - name: blackbox-exporter-config-volume
          configMap:
            name: blackbox-exporter-config
            items:
              - key: blackbox.yml
                path: blackbox.yml
            defaultMode: 0744
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
  name: prometheus-blackbox-exporter
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 9115
  selector:
    app: prometheus-blackbox-exporter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackbox-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: blackbox-bas-tls
  rules:
  - host: blackbox.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-blackbox-exporter
            port:
              number: 80
